@@ -352,7 +352,7 @@ Method* ProxyInstance::methodNamed(PropertyName propertyName)
         return 0;
     
     // If we already have an entry in the map, use it.
-    MethodMap::iterator existingMapEntry = m_methods.find(name.impl());
+    auto existingMapEntry = m_methods.find(name.impl());
     if (existingMapEntry != m_methods.end()) {
         if (existingMapEntry->value)
             return existingMapEntry->value;
@@ -374,7 +374,7 @@ Method* ProxyInstance::methodNamed(PropertyName propertyName)
         return 0;
 
     // Add a new entry to the map unless an entry was added while we were in waitForReply.
-    MethodMap::AddResult mapAddResult = m_methods.add(name.impl(), 0);
+    auto mapAddResult = m_methods.add(name.impl(), 0);
     if (mapAddResult.isNewEntry && reply->m_result)
         mapAddResult.iterator->value = new ProxyMethod(methodName);
 
@@ -391,7 +391,7 @@ Field* ProxyInstance::fieldNamed(PropertyName propertyName)
         return 0;
     
     // If we already have an entry in the map, use it.
-    FieldMap::iterator existingMapEntry = m_fields.find(name.impl());
+    auto existingMapEntry = m_fields.find(name.impl());
     if (existingMapEntry != m_fields.end())
         return existingMapEntry->value;
     
@@ -411,7 +411,7 @@ Field* ProxyInstance::fieldNamed(PropertyName propertyName)
         return 0;
     
     // Add a new entry to the map unless an entry was added while we were in waitForReply.
-    FieldMap::AddResult mapAddResult = m_fields.add(name.impl(), 0);
+    auto mapAddResult = m_fields.add(name.impl(), 0);
     if (mapAddResult.isNewEntry && reply->m_result)
         mapAddResult.iterator->value = new ProxyField(identifier);
     return mapAddResult.iterator->value;
